Terminando JWT com Laravel

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "barryvdh/laravel-cors": "^0.8.0",
-        "pagseguro/php": "2.7.1"
+        "pagseguro/php": "2.7.1",
+        "tymon/jwt-auth": "0.5.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
